--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="tm5Y6ZNTf-lBqbwniGjQPv1q02o2TuUQZ9GTYa4SMLg" />
-  <title>LaTeX.css — Make your website look like a LaTeX document</title>
+  <title>Papers — AI Exploration Hub</title>
 
   <meta name="description"
-    content="A minimal, almost class-less CSS library to write modern websites that look like LaTeX documents." />
+    content="ai in K12, ai in education, ai in K12 education, ai in K12 education research, ai in K12 education papers" />
   <meta name="keywords" content="latex.css,css library,class-less css,latex css" />
   <meta property="og:title" content="LaTeX.css" />
   <meta property="og:url" content="https://latex.vercel.app" />
   <meta property="og:description"
-    content="A minimal, almost class-less CSS library to write modern websites that look like LaTeX documents." />
+    content="ai in K12, ai in education, ai in K12 education, ai in K12 education research, ai in K12 education papers" />
   <meta property="og:type" content="website" />
 
   <link rel="stylesheet" href="style.css" />
@@ -24,8 +24,8 @@
   <header>
     <h1><span class="latex">L<span>a</span>T<span>e</span>X</span>.css</h1>
     <p class="author">
-      Vincent Dörig <br />
-      May 2020
+      AIEH <br />
+      Oct 2024
     </p>
   </header>
 
@@ -283,8 +283,11 @@
       <pre><code class="language-html">&lt;label for="sn-1" class="sidenote-toggle sidenote-number"&gt;&lt;/label&gt;
 &lt;input type="checkbox" id="sn-1" class="sidenote-toggle" /&gt;
 &lt;span class="sidenote"&gt;&lt;!-- sidenote content --&gt;&lt;/span&gt;</code></pre>
-      <p>If you do not need superscripted numbers, you can opt out of the <code>sidenote-number</code> class and the sidenote will not have a number assigned. On a smaller screen, you will need to add a symbol inside the <code>label</code> for the user to click on. <label for="sn-plus" class="sidenote-toggle">⊕</label><input type="checkbox"
-          id="sn-plus" class="sidenote-toggle" /><span class="sidenote">This is a sidenote without a number.</span></p>
+      <p>If you do not need superscripted numbers, you can opt out of the <code>sidenote-number</code> class and the
+        sidenote will not have a number assigned. On a smaller screen, you will need to add a symbol inside the
+        <code>label</code> for the user to click on. <label for="sn-plus" class="sidenote-toggle">⊕</label><input
+          type="checkbox" id="sn-plus" class="sidenote-toggle" /><span class="sidenote">This is a sidenote without a
+          number.</span></p>
       <p>The snippet for a sidenote without a number is very similar:</p>
       <pre><code class="language-html">&lt;label for="sn-anything" class="sidenote-toggle"&gt;⊕&lt;/label&gt;
 &lt;input type="checkbox" id="sn-anything" class="sidenote-toggle" /&gt;
@@ -293,10 +296,12 @@
           <label for="sn-plus" class="sidenote-toggle"><a
             href="#sn-plus-content">⊕</a></label><input type="checkbox" id="sn-plus" class="sidenote-toggle" /><span
           class="sidenote" id="sn-plus-content">This is a sidenote without a number.</span> -->
-      <p>Add a class of <code>left</code> to the span with the <code>sidenote</code> class to make the note appear on the left side of the page on instead of right.</p>
+      <p>Add a class of <code>left</code> to the span with the <code>sidenote</code> class to make the note appear on
+        the left side of the page on instead of right.</p>
       <p>The symbol you could use to indicate a sidenote is up to you. What about this notebook. <label for="sn-symbol"
           class="sidenote-toggle">📝</label><input type="checkbox" id="sn-symbol" class="sidenote-toggle" /><span
-          class="sidenote left">A notebook indicating a note. Aha. <br> (if on a large screen, resize to mobile to see the emoji)</span></p>
+          class="sidenote left">A notebook indicating a note. Aha. <br> (if on a large screen, resize to mobile to see
+          the emoji)</span></p>
       <!-- <blockquote>You could also have sidenotes inside blockquotes just like this one <label for="sn-quote"
           class="sidenote-toggle">🔖</label><input type="checkbox" id="sn-quote" class="sidenote-toggle" /><span
           class="sidenote">Hello there!</span>.</blockquote> -->
@@ -320,7 +325,11 @@
       <p>Like this: <button id="dark-mode-toggle">Toggle dark mode</button></p>
 
       <h2 id="alternative-typeface">Alternative Typeface</h2>
-      <p><span class="latex">L<span>a</span>T<span>e</span>X</span>.css uses Latin Modern by default. If you don't like this typeface (hard to read, too thin, etc.), you can switch to the <a href="https://github.com/alerque/libertinus"><code>Libertinus</code></a> font family by adding a class of <code>libertinus</code> to the <code class="language-html">&lt;body&gt;</code> tag. Click the button below to switch between Latin Modern and Libertinus.</p>
+      <p><span class="latex">L<span>a</span>T<span>e</span>X</span>.css uses Latin Modern by default. If you don't like
+        this typeface (hard to read, too thin, etc.), you can switch to the <a
+          href="https://github.com/alerque/libertinus"><code>Libertinus</code></a> font family by adding a class of
+        <code>libertinus</code> to the <code class="language-html">&lt;body&gt;</code> tag. Click the button below to
+        switch between Latin Modern and Libertinus.</p>
 
       <button id="typeface-toggle">Current typeface: <span id="typeface">Latin Modern</span></button>
 
@@ -629,7 +638,8 @@
     &lt;!-- your HTML code snippet --&gt;
   &lt;/code&gt;
 &lt;/pre&gt;</code></pre>
-      <p>Change which languages Prism highlights by customising the script <a href="https://prismjs.com/download.html">here</a>.</p>
+      <p>Change which languages Prism highlights by customising the script <a
+          href="https://prismjs.com/download.html">here</a>.</p>
 
       <div class="footnotes">
         <p id="fn1">
