--- a/responsive-full-background-image-demo.html
+++ b/responsive-full-background-image-demo.html
@@ -11,7 +11,7 @@
   <meta name="description"
     content="How to use the CSS background-size property to make an image fully span the entire viewport.">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link href="http://fonts.googleapis.com/css?family=Kotta+One|Cantarell:400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Kotta+One|Cantarell:400,700" rel="stylesheet" type="text/css">
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
