--- a/responsive-full-background-image-demo.html
+++ b/responsive-full-background-image-demo.html
@@ -24,7 +24,7 @@
 
   <!-- Not required: jquery.min.js and presentational-only.js is only used to demonstrate scrolling behavior of the viewport  -->
   <script src="presentational-only/jquery.min.js"></script>
-  <script src="pre/presentational-only.js"></script>
+  <script src="presentational-only/presentational-only.js"></script>
 </head>
 
 <body>
