add back home path

--- a/responsive-full-background-image-demo.html
+++ b/responsive-full-background-image-demo.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Responsive Full Background Image</title>
+  <title>Papers — AI Exploration Hub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="author" content="Six Revisions">
   <meta name="description"
@@ -30,7 +30,7 @@
 <body>
   <nav class="navbar" id="top">
     <div class="inner">
-      <a href="http://sixrevisions.com/css/responsive-background-image/">Read Tutorial</a>
+      <a href="https://ckwa.us">AI Exploration Hub Home</a>
     </div>
   </nav>
   <header class="container">
