--- a/responsive-full-background-image-demo.html
+++ b/responsive-full-background-image-demo.html
@@ -36,13 +36,8 @@
   </nav>
   <header class="container">
     <section class="content">
-      <h1>Responsive Full Background Image</h1>
-      <p class="sub-title"><strong>Resize your browser window</strong> <br /> to see the background image change in size
-      </p>
-      <p><a class="button" id="load-more-content" href="#top">Load some content</a></p>
-      <p>To see scrolling behavior</p>
 
-      <h1><span class="blue">&lt;</span>Table<span class="blue">&gt;</span> <span class="yellow">Responsive</pan>
+      <h1><span class="blue">&lt;</span>AIEH<span class="blue">&gt;</span> <span class="yellow">Papers</pan>
       </h1>
       <h2>Created with love by <a href="http://pablogarcia.dev" target="_blank">Pablo García</a></h2>
 
@@ -50,16 +45,16 @@
         <thead>
           <tr>
             <th>
-              <h1>Sites</h1>
+              <h1>Author</h1>
             </th>
             <th>
-              <h1>Views</h1>
+              <h1>Paper</h1>
             </th>
             <th>
-              <h1>Clicks</h1>
+              <h1>Author</h1>
             </th>
             <th>
-              <h1>Average</h1>
+              <h1>Paper</h1>
             </th>
           </tr>
         </thead>
