--- a/responsive-full-background-image-demo.html
+++ b/responsive-full-background-image-demo.html
@@ -37,9 +37,8 @@
   <header class="container">
     <section class="content">
 
-      <h1><span class="blue">&lt;</span>AIEH<span class="blue">&gt;</span> <span class="yellow">Papers</pan>
+      <h1><span class="blue">&lt;</span>AIEH<span class="blue">&gt;</span> <span class="yellow">Papers</span>
       </h1>
-      <h2>Created with love by <a href="http://pablogarcia.dev" target="_blank">Pablo García</a></h2>
 
       <table class="container">
         <thead>
