--- a/responsive-full-background-image-demo.html
+++ b/responsive-full-background-image-demo.html
@@ -59,39 +59,39 @@
         </thead>
         <tbody>
           <tr>
-            <td>Google</td>
+            <td>Eric</td>
             <td>9518</td>
-            <td>6369</td>
+            <td>Amy</td>
             <td>01:32:50</td>
           </tr>
           <tr>
-            <td>Twitter</td>
+            <td>Amy</td>
             <td>7326</td>
-            <td>10437</td>
+            <td>Joe</td>
             <td>00:51:22</td>
           </tr>
           <tr>
-            <td>Amazon</td>
+            <td>Joe</td>
             <td>4162</td>
-            <td>5327</td>
+            <td>Eric</td>
             <td>00:24:34</td>
           </tr>
           <tr>
-            <td>LinkedIn</td>
+            <td>Zhou</td>
             <td>3654</td>
-            <td>2961</td>
+            <td>Wang</td>
             <td>00:12:10</td>
           </tr>
           <tr>
-            <td>CodePen</td>
+            <td>Li</td>
             <td>2002</td>
-            <td>4135</td>
+            <td>Liu</td>
             <td>00:46:19</td>
           </tr>
           <tr>
-            <td>GitHub</td>
+            <td>Lisa</td>
             <td>4623</td>
-            <td>3486</td>
+            <td>Shall</td>
             <td>00:31:52</td>
           </tr>
         </tbody>
