--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body id="top">
   <header>
-    <h1><span class="latex">L<span>a</span>T<span>e</span>X</span>.css</h1>
+    <h1><span class="latex">P<span>a</span>P<span>e</span>r</span>.ckwa</h1>
     <p class="author">
       AIEH <br />
       Oct 2024
@@ -32,62 +32,26 @@
   <div class="abstract">
     <h2>Abstract</h2>
     <p>
-      This almost class-less CSS library turns your HTML document into a
-      website that looks like a
-      <span class="latex">L<span>a</span>T<span>e</span>X</span>
-      document. Write semantic HTML, add
-      <code class="language-html">&lt;link rel="stylesheet"
-          href="https://latex.vercel.app/style.css"&gt;</code>
-      to the <code class="language-html">&lt;head&gt;</code> of your project and you are good to go.
-      The source code can be found on GitHub at
-      <a href="https://github.com/vincentdoerig/latex-css">https://github.com/vincentdoerig/latex-css</a>.
+      A summary of the research achievements, papers, and experiences of the AI ​​Exploration Hub
+      <span class="latex">P<span>a</span>P<span>e</span>r</span>
+      documents. Go to AIEH home page, 
+      <a href="https://ckwa.us</a>.
     </p>
   </div>
 
   <nav role="navigation" class="toc">
     <h2>Contents</h2>
     <ol>
-      <li><a href="#getting-started">Getting Started</a></li>
+      <li><a href="#Papers">Papers</a></li>
       <li>
-        <a href="#class-based-elements">Class-based Elements</a>
+        <a href="#books">Books</a>
         <ol>
-          <li><a href="#author-abstract">Author and Abstract</a></li>
+          <li><a href="#author-abstract">Logic</a></li>
           <li>
-            <a href="#tdpl">Theorems, Definitions and Proofs</a>
-            <ol>
-              <li><a href="#proofs-theorems">Proofs & Theorems</a></li>
-              <li><a href="#lemmas">Lemmas</a></li>
-              <li><a href="#definitions">Definitions</a></li>
-            </ol>
+            <a href="#tdpl">CS</a>
           </li>
-          <li><a href="#paragraphs">Paragraphs</a></li>
-          <li><a href="#table-classes">Table Classes</a>
-            <ol>
-              <li><a href="#table-borders">Custom Table Borders</a></li>
-              <li><a href="#table-column-aligment">Table Column Alignment</a></li>
-            </ol>
-          </li>
-        </ol>
-      </li>
-      <li><a href="#language-support">Language Support</a></li>
-      <li><a href="#sidenotes">Sidenotes</a></li>
-      <li><a href="#dark-mode">Dark Mode</a></li>
-      <li><a href="#alternative-typeface">Alternative Typeface</a></li>
-      <li>
-        <a href="#html-elements">HTML Elements</a>
-        <ol>
-          <li><a href="#text-formatting">Text Formatting</a></li>
-          <li><a href="#blockquotes">Blockquotes</a></li>
-          <li><a href="#definition-lists">Definition Lists</a></li>
-          <li><a href="#tables">Tables</a></li>
-          <li><a href="#images">Images</a></li>
-        </ol>
-      </li>
-      <li>
-        <a href="#miscellaneous">Miscellaneous</a>
-        <ol>
-          <li><a href="#scroll-overflow">Scroll Overflow</a></li>
-          <li><a href="#syntax-highlighting">Syntax Highlighting</a></li>
+          <li><a href="#paragraphs">Philosophy</a></li>
+          <li><a href="#table-classes">Algorithm</a></li>
         </ol>
       </li>
     </ol>
@@ -95,43 +59,23 @@
 
   <main>
     <article>
-      <h2 id="getting-started">Getting Started</h2>
+      <h2 id="Papers">Papers</h2>
       <ul>
         <li>
-          Add
-          <code class="language-html">&lt;link rel="stylesheet"
-              href="https://latex.vercel.app/style.css"&gt;</code>
-          to the <code class="language-html">&lt;head&gt;</code> of your website or install the
-          package using <code>npm install latex.css</code>.
+          <code class="language-html">&lt;First Paper&gt;</code> .
         </li>
         <li>
-          (optional) Add any classes to elements described in the
-          <a href="#class-based-elements">next section</a>.
+          <a href="google.com">Second Paper</a>.
         </li>
         <li>
-          (optional) Add dark mode by adding the <code>latex-dark-auto</code> class to the <code
-            class="language-html">&lt;body&gt;</code>.
-          More infos <a href="#dark-mode">here</a>.
-        </li>
-        <li>
-          (optional) If you need support for
-          <span class="latex">L<span>a</span>T<span>e</span>X</span> math, add
-          the following script to include
-          <a href="https://www.mathjax.org/">MathJax</a>:
-          <pre><code class="language-html">&lt;script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"&gt;&lt;/script&gt;</code></pre>
-        </li>
-        <li>
-          (optional) If you need syntax highlighting, add
-          the following script to include
-          <a href="https://prismjs.com/">Prism</a> and the Prism LaTeX stylesheet (or use any other):
-          <pre><code class="language-html">&lt;link rel="stylesheet" href="https://latex.vercel.app/prism/prism.css"&gt;
-
-&lt;script src="https://cdn.jsdelivr.net/npm/prismjs/prism.min.js"&gt;&lt;/script&gt;</code></pre>
+          (optional) Third Paper
+          <a href="https://google.com/">Google</a> Stylish:
+          <pre><code class="language-html">&lt;Third One&gt;</code></pre>
         </li>
         <li>Done.</li>
       </ul>
 
-      <h2 id="class-based-elements">Class-based Elements</h2>
+      <h2 id="books">Books</h2>
       <h3 id="author-abstract">Author and Abstract</h3>
       <p>
         Use the following code to add an author and abstract to your document.
